updated buildspec.yml to support corretto11